# clocklm

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.js  vite.config.ts  vu-meter.html
.github/workflows/: pages.yml  tauri-release.yml
scripts/: sync-version.mjs
src/: App.tsx  vu-meter-window.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AppShell.tsx  ClockDisplayGrid.tsx
src/features/alarms/: README.md
src/features/clocks/: constants.ts
src/features/clocks/components/: AnalogClockCard.tsx  AnalogClockFallback.tsx  FlipClockCard.tsx  SevenSegmentClockCard.tsx
src/features/clocks/hooks/: useSystemTime.ts
src/features/clocks/utils/: digitsToSegments.ts
src/styles/: app.css  global.css
src/themes/: themes.ts
src/three/: ThreeClockPreview.tsx
src/types/: clock.ts  theme.ts
