[package]
name = "clocklm"
version = "1.0.38"
description = "Clocklm desktop application"
authors = ["Clocklm"]
edition = "2021"
build = "build.rs"

[lib]
name = "clocklm_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
